Fixed a z-index problem with modals toast

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -390,7 +390,7 @@ body {
 }
 
 .swal2-container {
-  z-index: 99999999999999999999999999 !important;
+  z-index: 214748364 !important;
 }
 
 body:has(.backdrop-modal) .to-top {
